<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingRight="@dimen/dp_10"
            >

            <LinearLayout
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:text="@string/edit"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/delete"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                     />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <com.pudding.tangentninety.weight.DrawerRecyclerView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="4dp" />

</LinearLayout>